--- a/src/index.css
+++ b/src/index.css
@@ -69,33 +69,6 @@
         padding: 1rem 0.5rem;
     }
     
-    .nav {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        flex-grow: 1;
-        align-items: center;
-        position: sticky;
-        top: 0;
-        font-family: var(--FF-HEADINGS);
-        /* width: 100%; */
-        /* padding: 1rem; */
-        background-color: var(--HEADER-BGCOLOR);
-        padding: var(--PADDING-TB) var(--PADDING-SIDE);
-        text-align: center;
-        z-index: 1;
-    }
-    
-    .nav__links {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        flex-grow: 1;
-        align-items: center;
-    }
-    
     h1 {
         font-size: 1.75rem;
         letter-spacing: .05rem;
@@ -111,13 +84,9 @@
     
     section {
         width: 100%;
-        /* max-width: 420px; */
-        /* max-width: 920px; */
         min-height: 400px;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
-        padding: 1rem;
         background-color: var(--BGCOLOR);
     }
     
@@ -161,7 +130,6 @@
     button,
     textarea {
         font-family: var(--FF-HEADINGS);
-        /* font-size: 22px; */
         font-size: .75rem;
         padding: 0.25rem;
         border-radius: 0.5rem;
@@ -169,7 +137,6 @@
     
     label,
     button {
-        /* margin-top: 1rem; */
         margin-top: .25rem;
         font-size: 1rem;
     }
@@ -231,43 +198,10 @@
     .line {
         display: inline;
     }
-    /* .products {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        gap: 1rem;
-    } */
-    
-    .div__welcome {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        flex-grow: 1;
-        padding: 10rem 10rem;
-        /* text-align: center;
-    align-content: center;
-    padding: 10rem 10rem; */
-    }
     
     .register-form,
     .login-form {
         align-items: center;
-    }
-    
-    .profile button {
-        width: 50vh;
-        margin: .5rem;
-    }
-    
-    .profile {
-        display: flex;
-        flex-direction: column;
-        /* justify-content: center;
-    align-content: center; */
-        align-items: center;
-        flex-grow: 1;
     }
     
     .customer,
@@ -293,7 +227,7 @@
     }
     
     .customer {
-        width: 75vh;
+        width: 12rem;
     }
     
     .custname,
@@ -312,20 +246,8 @@
     .product--price,
     .product--h3 {
         padding: .5rem;
-        /* display: inline; */
     }
-    
-    .footer {
-        position: sticky;
-        bottom: 0;
-        background-color: var(--HEADER-BGCOLOR);
-        color: var(--HEADER-COLOR);
-        padding: var(--PADDING-TB) var(--PADDING-SIDE);
-        text-align: center;
-        z-index: 1;
-    }
-    
-    .sale__container {
+    /* .sale__container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         margin-bottom: 1em;
@@ -333,16 +255,12 @@
     
     .sales__li {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
         grid-template-columns: 1fr 4fr 3fr 2fr 1fr;
-        margin-bottom: 1em;
     }
     
     .sale__li {
         display: grid;
-        /* grid-template-columns: repeat(4, 1fr); */
         grid-template-columns: 2fr 3fr 1fr 1fr;
-        margin-bottom: 1em;
     }
     
     .sales__container {
@@ -362,13 +280,10 @@
     
     .sales__header,
     .sales__item,
-    /* .sales__link, */
-    
     .sale__header,
     .sale__item {
         width: 100%;
-        /* padding: .05em; */
-        border: medium ridge var(--BORDER-COLOR);
+        border: thin ridge var(--BORDER-COLOR);
     }
     
     .sale__item,
@@ -381,4 +296,4 @@
     
     .sales__item a {
         color: var(--ITEM-COLOR);
-    }
+    } */
