--- a/src/index.css
+++ b/src/index.css
@@ -62,11 +62,11 @@
     
     .App {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
-        padding: 1rem 0.5rem;
+        /* min-height: 100vh; */
+        /* padding: 1rem 0.5rem; */
     }
     
     h1 {
